Fix landscape prediction heading alignment

--- a/assets/css/components/headingInfo.scss
+++ b/assets/css/components/headingInfo.scss
@@ -94,7 +94,7 @@
     }
 
     &.destination {
-      left: 1223px;
+      left: 1153px;
       width: 383px;
     }
 
